Add nova.network custom constraint
It is needed, for example, for validation of nova_network property
in ManilaShareNetwork resource.

Change-Id: Id9f71706e34a347f688e54ff32373533ce80019a

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ heat.clients =
 
 heat.constraints =
     nova.flavor = heat.engine.clients.os.nova:FlavorConstraint
+    nova.network = heat.engine.clients.os.nova:NetworkConstraint
     neutron.network = heat.engine.clients.os.neutron:NetworkConstraint
     neutron.port = heat.engine.clients.os.neutron:PortConstraint
     neutron.router = heat.engine.clients.os.neutron:RouterConstraint
