Use right oslo.service entry points
Use oslo.service.service entry point to generate a sample configuration
file. oslo.service library doesn't have an oslo.service entry point.

Change-Id: Ibb6872dd8e19ec15d72a174d94ca64b7aa489d36
Closes-Bug: 1468955

--- a/config-generator.conf
+++ b/config-generator.conf
@@ -15,4 +15,4 @@ namespace = oslo.messaging
 namespace = oslo.db
 namespace = oslo.log
 namespace = oslo.policy
-namespace = oslo.service
+namespace = oslo.service.service
