Fix config generator for oslo.service
Patch #196106 has added oslo.service.service to the config generator
configuration file. However, due to problems in oslo.service, there are
still two modules missing for configuration generation.

This patch adds another two modules that contain config options from the
oslo.service package.

Change-Id: I7bb823f62bf9125bbd9cf071b5acb3f59f997c66
Closes-Bug: 1468955

--- a/config-generator.conf
+++ b/config-generator.conf
@@ -16,3 +16,5 @@ namespace = oslo.db
 namespace = oslo.log
 namespace = oslo.policy
 namespace = oslo.service.service
+namespace = oslo.service.periodic_task
+namespace = oslo.service.sslutils
