tox environment for `bandit`
Add a tox environment for bandit so it can be run as a gate job
eventually. As-is, there are no high severity issues detected in heat.

Change-Id: Iab098a1d8bac5c95d67e6867ad5249987c3a786e

--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,9 @@ commands =
   find {toxinidir} -not -path '{toxinidir}/.tox/*' -name '*.pyc' -delete
   python setup.py testr --slowest --testr-args='--load-list py3-testlist'
 
+[testenv:bandit]
+deps = -r{toxinidir}/test-requirements.txt
+commands = bandit -c bandit.yaml -r heat -n5 -p heat_conservative
 
 [flake8]
 # H404 multi line docstring should start with a summary
