--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ keystonemiddleware>=2.0.0
 kombu>=3.0.7
 lxml>=2.3
 netaddr>=0.7.12
+oslo.cache>=0.3.0 # Apache-2.0
 oslo.config>=1.11.0 # Apache-2.0
 oslo.concurrency>=2.1.0 # Apache-2.0
 oslo.context>=0.2.0 # Apache-2.0
