Monasca client plugin
Adds monasca client plugin 'monasca' and notification
constraint 'monasca.notification'

implements blueprint support-monasca-alarm-notification

Co-authored-by: Sergey Kraynev <skraynev@mirantis.com>

Change-Id: I4533ee8ff67c6cc608c366bc66f30c20df2a56a5

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ heat.clients =
     magnum = heat.engine.clients.os.magnum:MagnumClientPlugin
     manila = heat.engine.clients.os.manila:ManilaClientPlugin
     mistral = heat.engine.clients.os.mistral:MistralClientPlugin
+    monasca = heat.engine.clients.os.monasca:MonascaClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
     neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
@@ -95,6 +96,7 @@ heat.constraints =
     designate.domain = heat.engine.clients.os.designate:DesignateDomainConstraint
     timezone = heat.engine.constraint.common_constraints:TimezoneConstraint
     cron_expression = heat.engine.constraint.common_constraints:CRONExpressionConstraint
+    monasca.notification = heat.engine.clients.os.monasca:MonascaNotificationConstraint
 
 heat.stack_lifecycle_plugins =
 
