add new constraints to ceilometer
Add timezone and cron_expression constraints.
this is required by time_constraints in Ceilometer alarm resources.
Change-Id: I2b348d9eb0f1d1ebf1407dbaeeb975dfa86b40d5
Partial-Bug: #1447942

--- a/setup.cfg
+++ b/setup.cfg
@@ -92,6 +92,8 @@ heat.constraints =
     manila.share_network = heat.engine.clients.os.manila:ManilaShareNetworkConstraint
     manila.share_type = heat.engine.clients.os.manila:ManilaShareTypeConstraint
     designate.domain = heat.engine.clients.os.designate:DesignateDomainConstraint
+    timezone = heat.engine.constraint.common.timezone:TimezoneConstraint
+    cron_expression = heat.engine.constraint.common.cron_expression:CRONExpressionConstraint
 
 heat.stack_lifecycle_plugins =
 
