--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 
 pbr<2.0,>=1.3
 Babel>=1.3
+croniter>=0.3.4 # MIT License
 cryptography>=0.9.1 # Apache-2.0
 eventlet>=0.17.4
 greenlet>=0.3.2
@@ -47,6 +48,7 @@ python-saharaclient>=0.9.0
 python-swiftclient>=2.2.0
 python-troveclient>=1.0.9
 python-zaqarclient>=0.1.1
+pytz>=2013.6
 PyYAML>=3.1.0
 requests>=2.5.2
 Routes!=2.0,!=2.1,>=1.12.3;python_version=='2.7'
