--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ python-glanceclient>=0.18.0
 python-heatclient>=0.3.0
 python-keystoneclient>=1.6.0
 python-manilaclient>=1.0.4
+python-mistralclient>=1.0.0
 python-neutronclient<3,>=2.3.11
 python-novaclient>=2.22.0
 python-saharaclient>=0.9.0
