Add keystone.user custom constraint
This the first patch of two to allow roles to be added to existing
users. This patch implements the keystone.user custom constraint,
allowing users to specify the names of existing keystone users in
their templates.

Change-Id: I9041f907a7bb227ba5c31353f431426c82c3ae47
Partial-Bug: #1477218

--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,7 @@ heat.constraints =
     keystone.project = heat.engine.clients.os.keystone:KeystoneProjectConstraint
     keystone.group = heat.engine.clients.os.keystone:KeystoneGroupConstraint
     keystone.service = heat.engine.clients.os.keystone:KeystoneServiceConstraint
+    keystone.user = heat.engine.clients.os.keystone:KeystoneUserConstraint
     manila.share_snapshot = heat.engine.clients.os.manila:ManilaShareSnapshotConstraint
     manila.share_network = heat.engine.clients.os.manila:ManilaShareNetworkConstraint
     manila.share_type = heat.engine.clients.os.manila:ManilaShareTypeConstraint
