--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ oslo.config>=1.4.0,<=1.6.0 # Apache-2.0
 oslo.db>=1.0.0,<1.1  # Apache-2.0
 oslo.i18n>=1.0.0,<=1.3.1 # Apache-2.0
 oslo.messaging>=1.4.0,<1.5.0
+oslo.serialization>=1.0.0,<=1.2.0 # Apache-2.0
 oslo.utils>=1.4.0,<1.5.0 # Apache-2.0
 PasteDeploy>=1.5.0,<=1.5.2
 posix_ipc<=0.9.9
