Add sighup_timeout to heat_integrationtests.conf.sample
Change-Id: I8102be29f6890f4c7be5da09e49c654cf433401f

--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -92,3 +92,7 @@
 
 # Timeout in seconds to wait for connectivity to server. (integer value)
 #connectivity_timeout = 120
+
+# Timeout in seconds to wait for adding or removing childprocess after
+# receiving of sighup signal (integer value)
+#sighup_timeout = 30
