Add a functional test option to skip notification tests
When running a standalone heat this can never pass.

Change-Id: Ibf435d6bec241904ada86d5786d69e7618adc13f

--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -90,6 +90,9 @@
 # Skip Stack Abandon Integration tests (boolean value)
 #skip_stack_abandon_tests = false
 
+# Skip Notification Integration tests (boolean value)
+#skip_notification_tests = false
+
 # Timeout in seconds to wait for connectivity to server. (integer value)
 #connectivity_timeout = 120
 
