collect common constraints
Create directory for common constraints and collect constraints.

Change-Id: Ie0800baa5415a71b67ede22313b0d57b198e8dc4

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,7 +72,7 @@ heat.constraints =
     neutron.router = heat.engine.clients.os.neutron:RouterConstraint
     neutron.subnet = heat.engine.clients.os.neutron:SubnetConstraint
     glance.image = heat.engine.clients.os.glance:ImageConstraint
-    iso_8601 = heat.engine.iso_8601:ISO8601Constraint
+    iso_8601 = heat.engine.constraint.common_constraints:ISO8601Constraint
     nova.server = heat.engine.clients.os.nova:ServerConstraint
     nova.keypair = heat.engine.clients.os.nova:KeypairConstraint
     cinder.volume = heat.engine.clients.os.cinder:VolumeConstraint
