move network constraints from neutron to common constraint
seperate out common network constraints (ip_addr, cidr, and mac_addr)

Change-Id: I617035e379c4e86ac0ce4c77f26ebfca5b3d691a

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,9 +80,9 @@ heat.constraints =
     cinder.vtype = heat.engine.clients.os.cinder:VolumeTypeConstraint
     sahara.image = heat.engine.clients.os.sahara:ImageConstraint
     trove.flavor = heat.engine.clients.os.trove:FlavorConstraint
-    ip_addr = heat.engine.clients.os.neutron:IPConstraint
-    mac_addr = heat.engine.clients.os.neutron:MACConstraint
-    net_cidr = heat.engine.clients.os.neutron:CIDRConstraint
+    ip_addr = heat.engine.constraint.common_constraints:IPConstraint
+    mac_addr = heat.engine.constraint.common_constraints:MACConstraint
+    net_cidr = heat.engine.constraint.common_constraints:CIDRConstraint
     keystone.role = heat.engine.clients.os.keystone:KeystoneRoleConstraint
     keystone.domain = heat.engine.clients.os.keystone:KeystoneDomainConstraint
     keystone.project = heat.engine.clients.os.keystone:KeystoneProjectConstraint
