Use OS_TEST_PATH for integration tests
This allows the removal of the heat_integrationtests regex, which means
that {posargs} can be specified to run only a single test if desired.

Change-Id: I0724a51960b9137824b139bc1d69b42a9e5d4b9c

--- a/tox.ini
+++ b/tox.ini
@@ -27,12 +27,13 @@ commands =
 
 [testenv:integration]
 setenv = VIRTUAL_ENV={envdir}
+         OS_TEST_PATH=./heat_integrationtests
          TESTR_START_DIR=heat_integrationtests
 passenv = OS_*
 usedevelop = False
 deps = -r{toxinidir}/heat_integrationtests/requirements.txt
 commands =
-  bash tools/pretty_tox.sh '^heat_integrationtests.*{posargs}'
+  bash tools/pretty_tox.sh '{posargs}'
 
 [testenv:pep8]
 commands =
