--- a/setup.cfg
+++ b/setup.cfg
@@ -92,8 +92,8 @@ heat.constraints =
     manila.share_network = heat.engine.clients.os.manila:ManilaShareNetworkConstraint
     manila.share_type = heat.engine.clients.os.manila:ManilaShareTypeConstraint
     designate.domain = heat.engine.clients.os.designate:DesignateDomainConstraint
-    timezone = heat.engine.constraint.common.timezone:TimezoneConstraint
-    cron_expression = heat.engine.constraint.common.cron_expression:CRONExpressionConstraint
+    timezone = heat.engine.constraint.common_constraints:TimezoneConstraint
+    cron_expression = heat.engine.constraint.common_constraints:CRONExpressionConstraint
 
 heat.stack_lifecycle_plugins =
 
