--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -84,12 +84,13 @@
 # Skip all functional tests (boolean value)
 #skip_functional_tests = false
 
-# List of functional test class names to skip ex. AutoscalingGroupTest,
-# CreateStackTest (list value)
+# List of functional test class or class.method names to skip ex.
+# AutoscalingGroupTest,InstanceGroupBasicTest.test_size_updates_work (list
+# value)
 #skip_functional_test_list = <None>
 
-# List of scenario test class names to skip ex. NeutronLoadBalancerTest, (list
-# value)
+# List of scenario test class or class.method names to skip ex.
+# NeutronLoadBalancerTest, CeilometerAlarmTest.test_alarm (list value)
 #skip_scenario_test_list = <None>
 
 # List of stack actions in tests to skip ex. ABANDON, ADOPT, SUSPEND, RESUME
