Add console_scripts entry points for all heat services
As a follow-up to Ibfd54e7b1bae700e4fb49a32e5bf7c00d1f104d9,
moving all the scripts from bin/ to setuptools entry points.

The devstack change is here: Iffb6d09bfef593d854b38e68200ae6039c4727e7

partial blueprint upgrade-tests

Change-Id: Ic8f5b8dc85098de752bbf673c4b15c06fdc4162a

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,16 +21,16 @@ classifier =
 packages =
     heat
 scripts =
-    bin/heat-api
-    bin/heat-api-cfn
-    bin/heat-api-cloudwatch
     bin/heat-db-setup
-    bin/heat-engine
     bin/heat-keystone-setup
     bin/heat-keystone-setup-domain
 
 [entry_points]
 console_scripts =
+    heat-api = heat.cmd.api:main
+    heat-api-cfn = heat.cmd.api_cfn:main
+    heat-api-cloudwatch = heat.cmd.api_cloudwatch:main
+    heat-engine = heat.cmd.engine:main
     heat-manage = heat.cmd.manage:main
 
 oslo.config.opts =
